feat: 完成收藏和商品对比功能